# codecrafters-redis-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.observability.yml  pyproject.toml
app/: command_executor.py  commands.py  config.py  dispatcher.py  handlers.py  main.py  metrics.py  parser.py  persistence.py  pubsub_client.py  replication.py  resp_types.py  session.py  state.py  storage.py  types.py
app/command_handlers/: __init__.py  core.py  lists.py  misc.py  pubsub.py  replication.py  streams.py  strings.py  transactions.py  zsets.py
monitoring/grafana/dashboards/: redis-clone-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
scripts/perf/: pubsub_benchmark.py  redis_protocol.py  replication_benchmark.py  run-benchmark.ps1  run-benchmark.sh
tests/: test_core_handlers.py  test_handlers.py  test_main.py  test_metrics.py  test_parser.py  test_pubsub_publish.py  test_smoke.py  test_storage.py
