[project]
name = "codecrafters-redis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["prometheus-client"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=90"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]  
exclude = ["tmp*"]